--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "check-types": "tsc --noEmit",
     "ui:add": "bunx --bun shadcn@latest add",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
