--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "drizzle-orm": "^0.44.5",
     "drizzle-seed": "^0.3.1",
     "lucide-react": "^0.544.0",
+    "modern-screenshot": "^4.6.6",
     "nanoid": "^5.1.5",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
